# keyring-test

./: .gitignore  README.md  pyproject.toml
src/: keyring_storage.py  main.py
